--- a/src/css/style.css
+++ b/src/css/style.css
@@ -319,7 +319,7 @@ template {
 
 @font-face {
   font-family: 'Berlingske';
-  src: local("BerlingskeSerif-ExtBdIta"), url("../fonts/BerlingskeSerif-ExtBdIta.woff2") format("woff2"), url("../fonts/BerlingskeSerif-ExtBdIta.woff") format("woff");
+  src: local("BerlingskeSerif-BlkItalic"), url("../fonts/BerlingskeSerif-BlkItalic.woff2") format("woff2"), url("../fonts/BerlingskeSerif-BlkItalic.woff") format("woff");
   font-weight: 900;
   font-style: italic; }
 
@@ -342,6 +342,7 @@ html {
   box-sizing: inherit; }
 
 body {
+  min-width: 320px;
   margin: 0;
   padding: 0;
   font-family: 'MuseoSans', 'Tahoma', sans-serif; }
@@ -376,10 +377,14 @@ input[type="radio"].visually-hidden {
   overflow: hidden; }
 
 .page-header__wrapper {
+  position: relative;
   display: flex;
   align-items: center;
   width: 1180px;
-  padding: 50px 20px; }
+  margin: 0 auto;
+  margin-bottom: -168px;
+  padding: 50px 20px;
+  z-index: 100; }
 
 .page-header__logo {
   margin-right: 25px; }
@@ -389,15 +394,16 @@ input[type="radio"].visually-hidden {
   height: 55px; }
 
 .page-header__title-wrapper {
-  width: 350px;
-  margin-right: 50px; }
+  width: 340px;
+  margin-right: 60px; }
 
 .page-header__title {
   margin: 0;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   font-size: 12px;
   line-height: 16px;
   font-weight: 300;
+  letter-spacing: 0.050em;
   color: #989898; }
 
 .page-header__title-list {
@@ -411,6 +417,8 @@ input[type="radio"].visually-hidden {
   display: flex;
   align-items: center;
   height: 26px;
+  font-size: 12px;
+  line-height: 16px;
   font-weight: 500;
   color: #282828;
   background-repeat: no-repeat; }
@@ -426,6 +434,7 @@ input[type="radio"].visually-hidden {
     background-size: 34px; }
 
 .page-header__catalog-link-wrapper {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -436,6 +445,15 @@ input[type="radio"].visually-hidden {
   background-repeat: no-repeat;
   background-size: 68px;
   background-position: left center; }
+  .page-header__catalog-link-wrapper::before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    width: 40px;
+    height: 50px;
+    box-shadow: 0 0 30px 20px rgba(0, 0, 0, 0.12);
+    z-index: -1; }
 
 .page-header__catalog-link {
   display: block;
@@ -449,6 +467,7 @@ input[type="radio"].visually-hidden {
 .phone__description {
   position: relative;
   margin: 0;
+  margin-bottom: 5px;
   padding: 0;
   padding-left: 25px;
   font-weight: 300;
@@ -489,6 +508,32 @@ input[type="radio"].visually-hidden {
 .open {
   color: #00af47; }
 
+.columns {
+  position: relative;
+  padding-top: 200px;
+  background-image: url("../img/main-bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center; }
+  .columns::before {
+    content: '';
+    position: absolute;
+    top: 210px;
+    right: 0;
+    width: 174px;
+    height: 352px;
+    background-image: url("../img/jalousie.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 174px; }
+
+.columns__wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 1180px;
+  margin: 0 auto;
+  padding: 0 20px; }
+
 .features {
   margin-bottom: 100px; }
 
@@ -526,12 +571,12 @@ input[type="radio"].visually-hidden {
 .features__title {
   width: 570px;
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   font-family: 'GothamPro', 'Tahoma', sans-serif;
   font-size: 40px;
   font-weight: 300;
   line-height: 48px;
-  letter-spacing: 0.001em; }
+  letter-spacing: 0.010em; }
   .features__title span {
     font-family: 'Berlingske', 'Palatino', serif;
     font-weight: 800;
@@ -540,6 +585,7 @@ input[type="radio"].visually-hidden {
 .features__subtitle {
   position: relative;
   margin: 0;
+  margin-bottom: 20px;
   padding-left: 70px;
   font-family: 'GothamPro', 'Tahoma', sans-serif;
   font-size: 24px;
@@ -571,29 +617,29 @@ input[type="radio"].visually-hidden {
     background-color: #000000;
     opacity: 0.2; }
 
-.features__list {
+.features-list {
   display: flex;
   width: 570px;
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
   padding: 0;
   list-style: none; }
 
-.features__item {
+.features-list__item {
   width: 164px;
   margin-right: 12px; }
-  .features__item:last-child {
+  .features-list__item:last-child {
     margin-right: 0; }
-  .features__item--long {
+  .features-list__item--long {
     width: 220px; }
 
-.features__image-wrapper {
+.features-list__image-wrapper {
   display: flex;
   align-items: flex-end;
   min-height: 70px;
   margin-bottom: 10px; }
 
-.features__list-title {
+.features-list__title {
   margin: 0;
   margin-bottom: 10px;
   font-family: 'Berlingske', 'Palatino', serif;
@@ -603,7 +649,7 @@ input[type="radio"].visually-hidden {
   letter-spacing: 0.025em;
   color: #282828; }
 
-.features__list-text {
+.features-list__text {
   margin: 0;
   font-size: 12px;
   line-height: 16px;
@@ -692,3 +738,131 @@ input[type="radio"].visually-hidden {
     height: 13px;
     border-radius: 13px;
     background-color: #E73F29; }
+
+.galler__title-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 40px; }
+
+.gallery__title {
+  margin: 0;
+  margin-bottom: 10px;
+  font-family: 'GothamPro', 'Tahoma', sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 48px; }
+  .gallery__title span {
+    font-family: 'Berlingske', 'Palantino', serif;
+    font-weight: 900;
+    letter-spacing: 0.025em; }
+
+.gallery__button-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center; }
+  .gallery__button-wrapper::before {
+    content: '';
+    position: absolute;
+    top: -28px;
+    left: -45px;
+    width: 21px;
+    height: 61px;
+    background-image: url("../img/arrow-curved.png");
+    background-repeat: no-repeat;
+    background-size: 21px 61px;
+    background-position: center;
+    opacity: 0.5; }
+
+.gallery__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 183px;
+  height: 64px;
+  border: none;
+  background-color: transparent;
+  background-image: url("../img/border.svg");
+  background-repeat: no-repeat;
+  background-size: 183px 64px;
+  background-position: center;
+  font-family: 'Berlingske', 'Palantino', serif;
+  font-size: 18px;
+  line-height: 55px;
+  font-weight: 900;
+  letter-spacing: 0.050em;
+  color: #747474; }
+  .gallery__button:first-child {
+    margin-right: 15px; }
+  .gallery__button--active {
+    position: relative;
+    box-shadow: 0 0 47px rgba(0, 0, 0, 0.14);
+    color: #282828;
+    background-color: #ffffff;
+    background-image: url("../img/border-active.svg"); }
+    .gallery__button--active::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: -7px;
+      transform: translateY(-50%);
+      width: 14px;
+      height: 14px;
+      border-radius: 14px;
+      background-color: #f1f1f1; }
+    .gallery__button--active::after {
+      content: '';
+      position: absolute;
+      top: 50%;
+      right: -7px;
+      transform: translateY(-50%);
+      width: 14px;
+      height: 14px;
+      border-radius: 14px;
+      background-color: #f1f1f1; }
+
+.slider {
+  position: relative;
+  width: 510px;
+  margin: 0 auto 40px; }
+
+.slider__list {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.pagination {
+  position: absolute;
+  bottom: -17px;
+  left: 53px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 104px;
+  height: 107px;
+  background-image: url("../img/pagination-bg.png");
+  background-repeat: no-repeat;
+  background-size: 104px;
+  background-position: center; }
+
+.pagination__icon {
+  fill: #ffffff; }
+
+.pagination__button {
+  border: none;
+  padding: 5px;
+  background-color: transparent; }
+  .pagination__button--prev .pagination__icon {
+    transform: rotate(180deg);
+    opacity: 0.5; }
+
+.pagination__list {
+  font-family: 'Berlingske', 'Palantino', serif;
+  line-height: 24px;
+  color: #ffffff; }
+  .pagination__list-current-item {
+    font-size: 18px; }
+  .pagination__list-last-item {
+    font-size: 14px; }
