--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,5 +2,10 @@
 @import "global.scss";
 @import "blocks/page-header.scss";
 @import "blocks/phone.scss";
+@import "blocks/columns.scss";
 @import "blocks/features.scss";
+@import "blocks/features-list.scss";
 @import "blocks/cost.scss";
+@import "blocks/gallery.scss";
+@import "blocks/slider.scss";
+@import "blocks/pagination.scss";
