--- a/src/sass/blocks/features-list.scss
+++ b/src/sass/blocks/features-list.scss
@@ -48,3 +48,46 @@
   color: #989898;
   font-weight: 300;
 }
+
+@media (max-width: 1179px) {
+  .features-list {
+    margin-bottom: 80px;
+  }
+}
+
+@media (max-width: 889px) {
+  .features-list {
+    justify-content: space-between;
+    width: auto;
+  }
+
+  .features-list__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 0;
+    width: 130px;
+
+    text-align: center;
+
+    &--long {
+      width: 190px;
+    }
+  }
+}
+
+@media (max-width: 549px) {
+  .features-list {
+    flex-direction: column;
+    margin-bottom: 40px;
+  }
+
+  .features-list__item {
+    width: auto;
+    margin-bottom: 20px;
+  }
+
+  .features-list__text {
+    max-width: 320px;
+  }
+}
