--- a/src/sass/blocks/slider.scss
+++ b/src/sass/blocks/slider.scss
@@ -11,3 +11,13 @@
 
   list-style: none;
 }
+
+@media (max-width: 549px) {
+  .slider {
+    width: auto;
+  }
+
+  .slider__image {
+    width: 100%;
+  }
+}
