--- a/src/css/style.css
+++ b/src/css/style.css
@@ -464,6 +464,68 @@ input[type="radio"].visually-hidden {
   text-transform: uppercase;
   color: #d5132a; }
 
+@media (max-width: 1179px) {
+  .page-header__wrapper {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    width: 890px;
+    margin-bottom: -228px;
+    flex-wrap: wrap;
+    justify-content: space-between; }
+  .page-header__logo {
+    margin-right: 0; }
+  .page-header__title-wrapper {
+    order: 5; }
+  .page-header__catalog-link-wrapper {
+    order: 4;
+    align-self: flex-end;
+    min-height: auto;
+    margin-right: 0;
+    background: none; }
+    .page-header__catalog-link-wrapper::before {
+      width: 0;
+      height: 0;
+      box-shadow: 0 0 0 0; }
+  .page-header__phone {
+    order: 6;
+    align-self: flex-end; } }
+
+@media (max-width: 889px) {
+  .page-header__wrapper {
+    width: 550px;
+    margin-bottom: -315px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .page-header__logo {
+    margin-bottom: 20px; }
+  .page-header__title-wrapper {
+    margin-right: 0;
+    margin-bottom: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .page-header__catalog-link-wrapper {
+    order: 6;
+    margin-bottom: 20px;
+    align-self: center;
+    text-align: center; }
+  .page-header__catalog-link {
+    margin: 0 auto; }
+  .page-header__phone {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    align-self: center; } }
+
+@media (max-width: 549px) {
+  .page-header__wrapper {
+    width: auto;
+    min-width: 320px; }
+  .page-header__title-wrapper {
+    width: auto; } }
+
 .phone__description {
   position: relative;
   margin: 0;
@@ -508,6 +570,10 @@ input[type="radio"].visually-hidden {
 .open {
   color: #00af47; }
 
+@media (max-width: 889px) {
+  .phone__link {
+    margin-bottom: 10px; } }
+
 .columns {
   position: relative;
   padding-top: 200px;
@@ -533,6 +599,26 @@ input[type="radio"].visually-hidden {
   width: 1180px;
   margin: 0 auto;
   padding: 0 20px; }
+
+@media (max-width: 1380px) {
+  .columns::before {
+    background: none; } }
+
+@media (max-width: 1179px) {
+  .columns__wrapper {
+    width: 890px;
+    flex-direction: column; } }
+
+@media (max-width: 889px) {
+  .columns {
+    padding-top: 290px; }
+  .columns__wrapper {
+    width: 550px; } }
+
+@media (max-width: 549px) {
+  .columns__wrapper {
+    width: auto;
+    min-width: 320px; } }
 
 .features {
   margin-bottom: 100px; }
@@ -617,6 +703,55 @@ input[type="radio"].visually-hidden {
     background-color: #000000;
     opacity: 0.2; }
 
+@media (max-width: 1179px) {
+  .features {
+    margin-bottom: 60px;
+    padding-top: 40px; }
+  .features__wrapper {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; }
+  .features__promo {
+    position: relative;
+    left: 40px;
+    margin-bottom: 20px; }
+  .features__title {
+    width: auto;
+    text-align: center; } }
+
+@media (max-width: 889px) {
+  .features__wrapper {
+    width: auto; }
+  .features__title {
+    font-size: 32px;
+    line-height: 42px; }
+  .features__subtitle {
+    padding-left: 0;
+    font-size: 20px; }
+    .features__subtitle::before {
+      width: 0;
+      height: 0; } }
+
+@media (max-width: 549px) {
+  .features {
+    margin-bottom: 40px; }
+  .features__wrapper {
+    flex-direction: column;
+    align-items: center;
+    text-align: center; }
+  .features__promo {
+    left: 0;
+    width: auto;
+    background: none; }
+  .features__title {
+    font-size: 22px;
+    line-height: 28px; }
+  .features__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0; } }
+
 .features-list {
   display: flex;
   width: 570px;
@@ -655,6 +790,34 @@ input[type="radio"].visually-hidden {
   line-height: 16px;
   color: #989898;
   font-weight: 300; }
+
+@media (max-width: 1179px) {
+  .features-list {
+    margin-bottom: 80px; } }
+
+@media (max-width: 889px) {
+  .features-list {
+    justify-content: space-between;
+    width: auto; }
+  .features-list__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-right: 0;
+    width: 130px;
+    text-align: center; }
+    .features-list__item--long {
+      width: 190px; } }
+
+@media (max-width: 549px) {
+  .features-list {
+    flex-direction: column;
+    margin-bottom: 40px; }
+  .features-list__item {
+    width: auto;
+    margin-bottom: 20px; }
+  .features-list__text {
+    max-width: 320px; } }
 
 .cost__button-wrapper {
   width: 412px;
@@ -738,6 +901,27 @@ input[type="radio"].visually-hidden {
     height: 13px;
     border-radius: 13px;
     background-color: #E73F29; }
+
+@media (max-width: 669px) {
+  .cost__button::after {
+    width: 0;
+    height: 0; }
+  .cost__button::before {
+    width: 0;
+    height: 0;
+    background: none; } }
+
+@media (max-width: 549px) {
+  .cost__button {
+    width: 280px; }
+  .cost__button-wrapper {
+    width: auto; }
+  .cost__button-main {
+    font-size: 16px;
+    line-height: 22px; }
+  .cost__button-more {
+    width: 210px;
+    font-size: 12px; } }
 
 .galler__title-wrapper {
   display: flex;
@@ -823,6 +1007,21 @@ input[type="radio"].visually-hidden {
       border-radius: 14px;
       background-color: #f1f1f1; }
 
+@media (max-width: 549px) {
+  .gallery__title {
+    margin-bottom: 40px;
+    text-align: center;
+    line-height: 28px; }
+  .gallery__button-wrapper {
+    flex-direction: column; }
+    .gallery__button-wrapper::before {
+      width: 0;
+      height: 0;
+      background: none; }
+  .gallery__button:first-child {
+    margin-right: 0;
+    margin-bottom: 20px; } }
+
 .slider {
   position: relative;
   width: 510px;
@@ -832,6 +1031,12 @@ input[type="radio"].visually-hidden {
   margin: 0;
   padding: 0;
   list-style: none; }
+
+@media (max-width: 549px) {
+  .slider {
+    width: auto; }
+  .slider__image {
+    width: 100%; } }
 
 .pagination {
   position: absolute;
