--- a/src/sass/blocks/columns.scss
+++ b/src/sass/blocks/columns.scss
@@ -30,3 +30,35 @@
   margin: 0 auto;
   padding: 0 20px;
 }
+
+@media (max-width: 1380px) {
+  .columns {
+    &::before {
+      background: none;
+    }
+  }
+}
+
+@media (max-width: 1179px) {
+  .columns__wrapper {
+    width: 890px;
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 889px) {
+  .columns {
+    padding-top: 290px;
+  }
+
+  .columns__wrapper {
+    width: 550px;
+  }
+}
+
+@media (max-width: 549px) {
+  .columns__wrapper {
+    width: auto;
+    min-width: 320px;
+  }
+}
