--- a/src/sass/blocks/gallery.scss
+++ b/src/sass/blocks/gallery.scss
@@ -52,6 +52,7 @@
   width: 183px;
   height: 64px;
   border: none;
+
   background-color: transparent;
   background-image: url('../img/border.svg');
   background-repeat: no-repeat;
@@ -105,6 +106,32 @@
       border-radius: 14px;
 
       background-color: #f1f1f1;
+    }
+  }
+}
+
+@media (max-width: 549px) {
+  .gallery__title {
+    margin-bottom: 40px;
+    text-align: center;
+    line-height: 28px;
+  }
+
+  .gallery__button-wrapper {
+    flex-direction: column;
+
+    &::before {
+      width: 0;
+      height: 0;
+
+      background: none;
+    }
+  }
+
+  .gallery__button {
+    &:first-child {
+      margin-right: 0;
+      margin-bottom: 20px;
     }
   }
 }
