--- a/src/sass/blocks/phone.scss
+++ b/src/sass/blocks/phone.scss
@@ -1,13 +1,13 @@
 .phone__description {
   position: relative;
   margin: 0;
-  margin-bottom: 5px;
+  margin-bottom: 0.4237vw; // 5px;
   padding: 0;
-  padding-left: 25px;
+  padding-left: 2.1186vw; // 25px;
 
   font-weight: 300;
-  font-size: 11px;
-  line-height: 14px;
+  font-size: 0.9322vw; // 11px;
+  line-height: 1.1864vw; // 14px;
 
   &::before {
     content: '';
@@ -15,9 +15,9 @@
     top: 2px;
     left: 0;
 
-    width: 10px;
-    height: 10px;
-    border-radius: 10px;
+    width: 0.8474vw; // 10px;
+    height: 0.8474vw; // 10px;
+    border-radius: 0.8474vw; // 10px;
 
     background-color: #00af47;
   }
@@ -26,11 +26,11 @@
 .phone__link {
   position: relative;
   display: block;
-  padding-left: 25px;
+  padding-left: 2.1186vw; // 25px;
 
   font-family: 'GothamPro', 'Tahoma', sans-serif;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 1.5254vw; // 18px;
+  line-height: 2.0338vw; // 24px;
   font-weight: 700;
   letter-spacing: 0.025em;
   color: #000000;
@@ -38,14 +38,14 @@
   &::before {
     content: '';
     position: absolute;
-    top: 4px;
+    top: 0.3389vw; // 4px;
     left: 0;
 
-    width: 18px;
-    height: 18px;
+    width: 1.5254vw; // 18px;
+    height: 1.5254vw; // 18px;
 
     background-image: url('../img/phone.png');
-    background-size: 17px;
+    background-size: 1.4406vw; // 17px;
     background-repeat: no-repeat;
     background-position: center;
   }
@@ -53,6 +53,38 @@
 
 .open {
   color: #00af47;
+}
+
+@media (max-width: 1179px) {
+  .phone__description {
+    margin-bottom: 5px;
+    padding-left: 25px;
+
+    font-size: 11px;
+    line-height: 14px;
+
+    &::before {
+      width: 10px;
+      height: 10px;
+      border-radius: 10px;
+    }
+  }
+
+  .phone__link {
+    padding-left: 25px;
+
+    font-size: 18px;
+    line-height: 24px;
+
+    &::before {
+      top: 4px;
+
+      width: 18px;
+      height: 18px;
+
+      background-size: 17px;
+    }
+  }
 }
 
 @media (max-width: 889px) {
