--- a/src/sass/blocks/gallery.scss
+++ b/src/sass/blocks/gallery.scss
@@ -1,4 +1,4 @@
-.galler__title-wrapper {
+.gallery__title-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -56,7 +56,7 @@
   background-color: transparent;
   background-image: url('../img/border.svg');
   background-repeat: no-repeat;
-  background-size: 15.5084vw; // 183px;
+  background-size: 15.4000vw; // 183px;
   background-position: center;
 
   font-family: 'Berlingske', 'Palantino', serif;
@@ -174,7 +174,7 @@
 @media (max-width: 549px) {
   .gallery__title {
     width: 280px;
-    
+
     margin-bottom: 40px;
     text-align: center;
     line-height: 28px;
